@@ -1,10 +1,10 @@
 {
-  "timestamp" : "2022-04-16T16:08:20Z",
-  "count" : 16,
+  "timestamp" : "2022-04-30T08:08:30Z",
+  "count" : 1,
   "count_minmax" : [ 0, 16 ],
   "count_prev_day_inc" : 20,
   "count_prev_day_dec" : 0,
-  "uniques" : 2,
+  "uniques" : 1,
   "uniques_minmax" : [ 0, 2 ],
   "uniques_prev_day_inc" : 3,
   "uniques_prev_day_dec" : 0
