@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-04-29T16:08:59Z",
+  "timestamp" : "2022-04-30T08:08:30Z",
   "count_outdated" : 4,
   "uniques_outdated" : 1,
-  "count" : 45,
-  "uniques" : 11,
+  "count" : 30,
+  "uniques" : 10,
   "views" : [
     {
       "timestamp": "2022-04-16T00:00:00Z",
-      "count": 16,
+      "count": 1,
       "count_minmax": [ 0, 16 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 0, 2 ]
     },
     {
