@@ -1,11 +1,11 @@
 {
-  "count": 41,
-  "uniques": 8,
+  "count": 26,
+  "uniques": 7,
   "views": [
     {
       "timestamp": "2022-04-16T00:00:00Z",
-      "count": 16,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-04-19T00:00:00Z",
